--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ali-rds",
-  "version": "3.3.1",
+  "name": "@zhennann/ali-rds",
+  "version": "3.3.3",
   "description": "Aliyun RDS client",
   "main": "lib/client.js",
   "files": [
